# chorder

./: CMakeLists.txt  README.md  description.json  index.html  package-lock.json  package.json  patch.export.json  presets.json  rnbo_source.cpp
rnbo/adapters/juce/: RNBO_JuceAudioProcessorEditor.cpp  RNBO_JuceAudioProcessorEditor.h
src/: CMakeLists.txt
src/audio/: audio_engine.cpp  audio_engine.h
src/core/: progression.cpp  progression.h
src/ui/: app_ui.cpp  app_ui.h  main.cpp
